# libvcard

./: CMakeLists.txt  README  libvcard.pro
debian/: changelog  control  copyright
include/vcard/: libvcard_global.h  vcard.h  vcardparam.h  vcardproperty.h
libvcard/: vcard.cpp  vcardparam.cpp  vcardproperty.cpp
